# astroscale

./: README.md  SYSTEM_OVERVIEW.md  build_ml_tensors.py  cleanup.sh  start.sh
archive/: analyze_features.py  catalogs.py  model-1.py
backend/: dune-project
backend/_build/: .db  .digest-db  log
backend/_build/default/: backend.dune-package  backend.opam
backend/_build/default/.dune/: configurator  configurator.v2
backend/_build/default/lib/: backend.cma  backend.cmxa  backend.cmxs
backend/_build/default/lib/.backend.objs/byte/: backend.cmi  backend.cmo  backend.cmt
backend/_build/default/lib/.backend.objs/native/: backend.cmx
backend/_build/default/lib/.merlin-conf/: lib-backend
backend/_build/default/test/.merlin-conf/: exe-test_backend
backend/_build/default/test/.test_backend.eobjs/byte/: dune__exe__Test_backend.cmi  dune__exe__Test_backend.cmti
backend/_build/default/test/.test_backend.eobjs/native/: dune__exe__Test_backend.cmx
backend/lib/: dune
core/: ARCHITECTURE.md  Cargo.toml  README.md  config.example.toml  config.toml
core/src/: config.rs  data.rs  error.rs  lib.rs  main.rs
core/src/federated/: mod.rs
core/src/ingest/: mod.rs
core/src/metrics/: mod.rs
core/src/preprocess/: mod.rs
core/src/sync/: mod.rs
core/src/tensor/: mod.rs
datasets/: sdss.py
datasets/catalogs/: apogee_dr17_mock.csv  apogee_dr17_sample.csv  gaia.py  gaiadr3_sample.csv  gen_apogee.py  gen_gaiadr3.py  gen_hst_meta.py  gen_rave.py  gen_sdss_galaxy.py  hst_cutout_meta.csv  rave_dr6_mock.csv  rave_dr6_sample.csv  sdss_dr17_sample.csv  sdss_galaxy_sample.csv
datasets/catalogs/gaia_dr3/: gaiadr3_sample.csv
datasets/catalogs/lamost_dr9/: amost_dr9_mock.csv  lamost_mock.py
datasets/ml_preprocessed/: model.py  stellar_redshift_training.csv
datasets/ml_preprocessed/models/: production_metadata.pkl  production_model.pkl  production_scaler_x.pkl  production_scaler_y.pkl  scaler_x.pkl  scaler_y.pkl
datasets/ml_preprocessed/tensors/: features.pt  mask.pt
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
ml/: inference_production.py  preprocess.py  req.txt
ml/src/: model.py
scripts/: export_gb_model.py  prepare_training_data.py  train_best_model.py  train_pipeline.sh
