[package]
name = "astroscale-core"
version = "0.1.0"
edition = "2021"
authors = ["AstroScale Team"]
description = "High-performance distributed astronomical data processing engine"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web framework & HTTP
warp = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.5", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"

# Parallel processing
rayon = "1.11"
crossbeam = "0.8"
dashmap = "6.1"

# Numerical computation
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-npy = "0.8"
ndarray-stats = "0.6"

# Machine Learning & Tensor operations
tch = { version = "0.17", optional = true }  # PyTorch bindings
ort = { version = "2.0", optional = true }   # ONNX Runtime

# Data structures
indexmap = "2.7"
hashbrown = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Database (optional for caching)
rusqlite = { version = "0.36", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

# Metrics & monitoring
prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
itertools = "0.14"
lazy_static = "1.5"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"

[features]
default = ["federated", "metrics"]
federated = []
metrics = []
torch = ["tch"]
onnx = ["ort"]
database = ["rusqlite", "sqlx"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[[bin]]
name = "astroscale-node"
path = "src/main.rs"

[lib]
name = "astroscale_core"
path = "src/lib.rs"
